# cookiecutter-py

./: LICENCE.txt  README.rst  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: conf.py  index.rst
hooks/: pre_gen_project.py  pre_prompt.py
{{ cookiecutter.github_project_name }}/: README.rst  pyproject.toml  tox.ini
{{ cookiecutter.github_project_name }}/.github/workflows/: build.yml
{{ cookiecutter.github_project_name }}/docs/: api.rst  conf.py  index.rst
