[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# :see: https://greenbone.github.io/autohooks/installation.html
[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    "autohooks.plugins.mypy",
    "autohooks.plugins.pytest"
]

[tool.mypy]
strict = true

# :see: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "{{ cookiecutter.pypi_project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "MIT"
readme = "README.rst"

documentation = "https://{{ cookiecutter.pypi_project_name }}.readthedocs.io/"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_project_name }}"

keywords = [
]
# :see: https://pypi.org/classifiers/
classifiers = [
]

include = [
    { path = "LICENCE.txt", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "test", format = "sdist" }
]
exclude = ["docs/_build"]
packages = [{ include = "{{ cookiecutter.package_name }}", from = "src" }]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
autohooks = "^23"
autohooks-plugin-black = "^23"
autohooks-plugin-mypy = "^23"
autohooks-plugin-pytest = "^23"
autohooks-plugin-ruff = "^23"
black = "^24"
mypy = "^1"
pytest = "^8"
sphinx = "^7"
sphinx_rtd_theme = "^2"
tox = "^4"

# Used by GitHub Actions.
[tool.poetry.group.ci.dependencies]
mypy = "^1"
pytest = "^8"
sphinx = "^7"
sphinx_rtd_theme = "^2"

[tool.poetry.urls]
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_project_name }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_project_name }}/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
